--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+Jinja2==2.6
+Pygments==1.5
+Sphinx==1.1.3
 TornadIO2==0.0.3
+asyncmongo==1.2.1
 distribute==0.6.27
+docutils==0.9.1
 greenlet==0.4.0
 gunicorn==0.14.6
+py-bcrypt==0.2
 pymongo==2.2-
 simplejson==2.6.1
 tornado==2.3
