--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ asyncmongo==1.2.1
 distribute==0.6.27
 docutils==0.9.1
 py-bcrypt==0.2
-pymongo==2.2-
+pymongo==2.2
 simplejson==2.6.1
 tornado==2.3
 wsgiref==0.1.2
