--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Sphinx==1.1.3
 TornadIO2==0.0.3
 WTForms==1.0.2
 asyncmongo==1.2.1
-distribute==0.6.27
+distribute
 docutils==0.9.1
 py-bcrypt==0.4
 pymongo==2.2
